bad/assign_arr_elem_array_string.example_compiler_output
ERROR
[1mbad/assign_arr_elem_array_string.lat:4:20: [1;31merror: [0;1massigning to `int[]` from incompatible type `string`[m
	(new int[][3])[1] = "";
	                  [1;32m^[m
